// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar tests should match snapshot with default Avatar 1`] = `
<DocumentFragment>
  <div
    class="styles__ContainerAvatar-sc-2niw0e-0"
  >
    <figure>
      <img
        class="styles__User-sc-2niw0e-1 eqmrgD"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`Avatar tests should match snapshot with default Avatar with url 1`] = `
<DocumentFragment>
  <div
    class="styles__ContainerAvatar-sc-2niw0e-0"
  >
    <figure>
      <img
        class="styles__User-sc-2niw0e-1 eqmrgD"
        src="https://imgfake.com"
      />
    </figure>
  </div>
</DocumentFragment>
`;
